worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: dockersamples/examplevotingapp_worker
          ports:
            - containerPort: 80
