result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: dockersamples/examplevotingapp_result 
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result-svc
spec:
  type: NodePort
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31001
