voting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: dockersamples/examplevotingapp_vote 
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vote-svc
spec:
  type: NodePort
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
